Issue #2379147 by gdaw: wb charts - legend color box stretched too wide

--- a/css/wetkit_bootstrap.styles.css
+++ b/css/wetkit_bootstrap.styles.css
@@ -372,3 +372,7 @@ ul.action-links .glyphicon {
 .item-list .pagination > li:first-child > span {
   padding: 10px 16px;
 }
+
+.legendColorBox {
+  width: 30px;
+}
