--- a/sass/components/wxt/_wxt.scss
+++ b/sass/components/wxt/_wxt.scss
@@ -117,3 +117,7 @@ ul.action-links .glyphicon {
 .item-list .pagination>li:first-child>span {
   padding: 10px 16px;
 }
+
+.legendColorBox {
+  width: 30px;
+}
